  * Drones may import modules from the console.
  * Host shell commands are evaluated with: sh <command>
    NOTE: This is somewhat buggy, because most utilities do not close stdin,
    which can cause MOSREF to assume the stream will never yield.  Currently,
    MOSREF will wait roughly 500ms, then terminate.  A future version of
    MOSREF will employ waitpid, here.

- 7/01/2006, MOSREF Prod
  * Added (list-refp list index) -> pair, similar to list-ref, except it
    returns the index'th pair in the list.

    >> (define a '(v w x y z))
    :: (v w x y z)
    >> (define b (list-refp a 2))
    :: (x y z)
    >> (set-car! b 101)
    >> b
    :: (101 y z)
    >> a
    :: (v w 101 y z)

  * Added the lib/args-fu module, which provides functionality useful for
    constructing complicated keyword argument parsers common with Common Lisp
    environments.  See mosref/prod.ms for examples of usage.

  * Added mosref/prod, an expert system for interrogating network services
    discovered by mosref/scanner and classifying their response for the
    operator.

- 7/01/2006, Build System Overhaul
  * bin/mosc now accepts zero or more module arguments -- it will build all
    of the listed modules, in dependency order.
  
  * bin/mosc also accepts a -exe <program> flag, instructing mosc to produce
    an executable program, much like build-exe.

  * compile now imports modules, instead of trying to guess the imported 
    symbols and macros.  For complicated macros, this greatly improves
    reliability, and, more importantly, more closely resembles user
    expectations.

  * mosvm stubs now invoke the (main) function at the end of load

- 6/28/2006, MOSREF Scanner
  * Added (| integer mask ...) -> integer, which performs a bit-wise or.
  * Added (& integer mask ...) -> integer, which performs a bit-wise and.
  * Added (<< integer offset) -> integer, which performs a bit-wise shift-left.
  * Added (>> integer offset) -> integer, which performs a bit-wise shift-or.